[package]
name = "xdel"
version = "0.1.0"
authors = ["Brian Duff <cairndubh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
xml-rs = "*"
rayon = "*"
multimap = "*"
ignore = "*"
regex = "*"
grep-regex = "*"
grep-searcher = "*"
grep-matcher = "*"
structopt = "*"
cachedir = "*"
bincode = "*"
serde = { version = "*", features = ["derive"] }
deflate = "*"

[dev-dependencies]
tempdir = "*"

