[package]
name = "art"
version = "0.1.0"
authors = ["Brian Duff <cairndubh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
xml-rs = "*"
multimap = "*"
ignore = "*"
regex = "*"
grep = "*"
structopt = "*"
cachedir = "*"
bincode = "*"
serde = { version = "*", features = ["derive"] }

[dev-dependencies]
tempdir = "*"

